# stopuhr

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: update_version.yml
_downloads/8974506f79f7d8ab34369b3cb7a54b3c/: advanced-usage.py
_downloads/aedd73028183d9aa7ef5337fa2e44d31/: advanced-usage.ipynb
_downloads/b4dafcc9ffb2d9ee67477fd01c6f8c44/: basic-usage.py
_downloads/f999045fe2d01ceb025e0472fed48172/: basic-usage.ipynb
_modules/: index.html
_modules/stopuhr/: chrono.html  funkuhr.html  stopuhr.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: advanced-usage.rst.txt  basic-usage.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/reference/: StopUhr.rst.txt  index.rst.txt  stopuhr.rst.txt
auto_examples/: advanced-usage.html  basic-usage.html  index.html  sg_execution_times.html
docs/: conf.py  index.rst  sg_execution_times.rst
docs/reference/: Chronometer.rst  FunkUhr.rst  funkuhr.rst  index.rst  stopwatch.rst
examples/: GALLERY_HEADER.rst
reference/: Chronometer.html  FunkUhr.html  StopUhr.html  funkuhr.html  index.html  stopuhr.html  stopwatch.html
src/stopuhr/: __init__.py  chrono.py  funkuhr.py  stopuhr.py
tests/: test_chrono.py
