[project]
name = "stopuhr"
dynamic = ["version"]
description = "A simple tool for measuring durations in Python."
readme = "README.md"
authors = [{ name = "Tobais Hölzer", email = "tobiashoelzer@hotmail.com" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://relativityhd.github.io/stopuhr/latest/"
Repository = "https://github.com/relativityhd/stopuhr"
Issues = "https://github.com/relativityhd/stopuhr/issues"

[project.optional-dependencies]
export = ["pandas>=2.2.3"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/stopuhr"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 120
indent-width = 4 # This is the default
select = [
    "F",
    "E",
    "W",
    "C",
    "I",
    "N",
    "D",
    "UP",
    "FLY",
    "NPY",
    "FURB",
    "DOC",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.11.2"]
docs = [
    "matplotlib>=3.10.1",
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.18.0",
]
tests = ["pytest>=8.3.5"]
